- Add auto start/stop VM. (virtualbox)
- Add syncthing and related user and group.
- Add a part of Xen dom0 edition.
- Add vfs.zfs.arc_max, vfs.zfs.arc_min, vfs.zfs.prefetch_disable.
- Add IPMItool needs ipmi_load enabled in System|Advanced|loader.conf.
- Add volblocksize on ZFS volume creation.
- Add volmode on ZFS volume.
- Add ability AFP compatibility per share.
- Remove usesendfile on CIFS/SMB.
- Remove legacy disk aliases such as /dev/ad0.
- Change some WebGUI menus and update text strings.
- Change DSA private key to RSA private key on SSH service.
- Change ZFS pool info reflected from zpool list.
- Change Store DOS attributes to OFF by default.
- Change var/tmpfs size to 512MB/256MB.
- Chaneg empty bridge is allowd.
- Upgrade bash 4.3 to patch 42.
- Upgrade isboot to 0.2.13.
- Upgrade tzdata to 2015g.
- Upgrade mDNSResponder to 576.30.4.
- Upgrade dmidecode to 3.0.
- Upgrade iperf3 to 3.1.1.
- Upgrade dialog to 1.2-20150920.
- Upgrade xmd to 0.5.
- Upgrade tmux to 2.1.
- Upgrade php to 5.6.16.
- Upgrade lighttpd to 1.4.38.
- Upgrade syncthing to 0.12.7.
- Upgrade nano to 2.5.0.
- Upgrade samba to 4.2.6.

Fixes:
- Fix run now on cron don't use Who field.
- Fix duplicate syncthing account when fresh install by 2067.
- Fix broken menu options livecd/liveusb.
- Fix syncthing causes Illegal instruction on old i386. (don't use SSE2)
- Fix VirtualBox cannot be connected via noVNC if using HTTPS.
- Fix bridged member cannot be set IP address.
- Fix minidlna log file location mismatch. (ticket #255)
- Fix smbclient use NT1 instead of SMB3/SMB2. (ticket #236)
- Fix cannot execute samba if time server is empty.
- Fix missing loader parameters on fresh installation. (full only)
- Fix NTFS is not detected on Import disks.
- Fix SSL certificate link. (ticket #239)
- Fix NFS share network. (ticket #238)
- Fix boot time ntpdate fail when AD DC enabled.
- Fix wrong path in Samba AD. (ticket #228, #232)