@@ -14,6 +14,7 @@
 # BEFORE: SERVERS
 
 . /etc/rc.subr
+. /etc/util.subr
 . /etc/configxml.subr
 
 name="syslogd"
@@ -24,6 +25,7 @@ load_rc_config "$name"
 # Defaults
 syslogd_enable=${syslogd_enable:-"NO"}
 syslogd_config=${syslogd_config:-"/var/etc/syslog.conf"}
+syslogd_peers=${syslogd_peers:-""}
 clog_logdir=${clog_logdir:-"/var/log"}
 pidfile="/var/run/syslog.pid"
 command="/usr/sbin/${name}"
@@ -37,9 +39,40 @@ mkconf_cmd="syslogd_mkconf"
 
 # Check if syslog'ing to remote syslog server is disabled
 if ! configxml_isset //syslogd/remote/enable; then
-	syslogd_flags="-8 -ss"
+	syslogd_flags="-8"
 	command_args="-f ${syslogd_config}"
+	if ! configxml_isset //syslogd/disablesecure; then
+		syslogd_flags="${syslogd_flags} -ss"
+	else
+		if [ -z "${syslogd_peers}" ]; then
+			_ifn=`configxml_get "//interfaces/lan/if"`
+			_ifn=`get_if ${_ifn}`
+			_ipaddr=`configxml_get "//interfaces/lan/ipaddr"`
+			_subnet=`configxml_get "//interfaces/lan/subnet"`
+			_network="$_ipaddr/$_subnet"
+			if [ "${_ipaddr}" = "dhcp" ]; then
+				_ipaddr=`get_ipaddr inet ${_ifn}`
+				_network=`get_network inet ${_ifn}`
+				if [ "${_ipaddr}" = "0.0.0.0" ]; then
+					echo "can't get DHCP address"
+					_network=""
+				fi
+			fi
+			if [ "${_network}" != "" ]; then
+				syslogd_peers="${_network}"
+			fi
+		fi
+		if [ "${syslogd_peers}" != "" ]; then
+			for _peer in ${syslogd_peers}; do
+				syslogd_flags="${syslogd_flags} -a ${_peer}"
+			done
+		fi
+	fi
 fi
+if configxml_isset //syslogd/disablecomp; then
+	syslogd_flags="${syslogd_flags} -cc"
+fi
+debug "flags: ${syslogd_flags}"
 
 syslogd_mkconf()
 {
